<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiveDaySplitActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Five_DaySplit"
        app:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnMonday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Monday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnTuesday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Tuesday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnWednesday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Wednesday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnThursday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Thursday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnFriday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Friday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSaturday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Saturday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSunday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Sunday"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

</LinearLayout>