<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixDaySplitActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="6 Day Split"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <Button
        android:id="@+id/btnMondayAndFriday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Monday_Friday"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnTuesdayAndSaturday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Tuesday_Saturday"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:background="@color/navy"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnWednesdayAndSunday"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Wednesday_Sunday"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:background="@color/green"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_weight="1"/>

</LinearLayout>