<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.firstsportapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/tileLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnRoutines"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="Routines"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnWorkouts"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="Workouts"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnLog"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="Log"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMyFoodDiary"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="Food Diary"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnWater"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/Water"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnScience"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/Science"
            android:textSize="30sp"/>

    </LinearLayout>

</LinearLayout>

    <Button
        android:id="@+id/btnTimer"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@+id/tileLayout"
        android:text="Timer"
        android:textSize="30sp"
        android:backgroundTint="@color/teal" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTimer"
        android:text="@string/logOut"
        android:textSize="25sp"
        android:backgroundTint="@color/red"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>